--- a/chess/style/style.css
+++ b/chess/style/style.css
@@ -123,3 +123,37 @@ button:hover {
 .unActive {
   background-color: inherit;
 }
+
+.capture_block {
+  position: absolute;
+  width: calc((100vw - 100vh) / 2.2);
+  height: 30%;
+  border-radius: 5px;
+  border: 1px solid rgb(108, 106, 106);
+  padding: 1rem;
+  box-shadow: 0 2px 2px 2px rgba(27, 27, 27, 0.05);
+}
+#whiteCaptrues {
+  bottom: 5%;
+  right: 1%;
+}
+
+#blackCaptrues {
+  top: 5%;
+  left: 1%;
+}
+
+#whiteCaptrues h1,
+#blackCaptrues h1 {
+  text-align: center;
+  font-weight: 400;
+
+  font-size: 1.7rem;
+}
+
+.Capture_img {
+  position: static;
+
+  width: 40px;
+  height: 40px;
+}
