--- a/chess/style/style.css
+++ b/chess/style/style.css
@@ -129,12 +129,12 @@ button:hover {
   width: calc((100vw - 100vh) / 2.2);
   height: 30%;
   border-radius: 5px;
-  border: 1px solid rgb(108, 106, 106);
+  /* border: 1px solid rgb(108, 106, 106); */
   padding: 1rem;
   box-shadow: 0 2px 2px 2px rgba(27, 27, 27, 0.05);
 }
 #whiteCaptrues {
-  bottom: 5%;
+  top: 5%;
   right: 1%;
 }
 
