add hover on td

--- a/chess/style/style.css
+++ b/chess/style/style.css
@@ -125,6 +125,10 @@ button:hover {
 .active {
   background-color: #2e2eb561 !important;
 }
+
+td:hover {
+  background-color: #2e2eb561 !important;
+}
 .unActive {
   background-color: inherit;
 }
